# reflectai-app

./: .copilot-docs  .editorconfig  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cron  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  rai
.claude/agents/: competency-domain-expert.md  database-specialist.md  devops-specialist.md  llm-specialist.md  security-specialist.md  slack-specialist.md  temporal-specialist.md  test-engineer.md
.claude/commands/: analyze_dependencies.md  check_health.md  compact_session.md  create_plan.md  debug_error.md  design_feature.md  fix_coverage.md  llm_cost_analysis.md  research_module.md  resume_session.md  review_pr.md  test_module.md  validate_async.md
.github/workflows/: build.yml  ci.yml  deploy.yml  pr-checks.yml
.kiro/specs/reflectai-fresh-implementation/: FUTURE_ROADMAP.md  database-schema.md  design.md  directory-structure-specification.md  directory-validation-checklist.md  error-handling-standards.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
data/: competency_matrix.json  level_to_title_matrix.json  manifest.json
docker/: README.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.test.yml
docker/certs/: .keep
docker/monitoring/: loki-config.yml  prometheus.yml  promtail-config.yml
docker/nginx/: nginx.conf
docs/: README.md  REDIS_MIGRATION_GUIDE.md  VERSION_MANAGEMENT.md
docs/architecture/: MODEL_SPECIFICATION.md  MULTI_AGENT_SYSTEM.md  SLACK_INTEGRATION_ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md
docs/archive/: ACE-PLUGINS-INTEGRATION.md  CONFIGURATION-ISSUE-RESOLUTION.md  CONVENTIONAL_COMMITS_GUIDE.md  ENTERPRISE_ARCH.md  INTENT_SYSTEM_IMPROVEMENTS.md  OVERVIEW.md  QUICK_REFERENCE.md  README.md  TECHNOLOGY_STACK.md  claude-code-optimization-guide.md
docs/archive/classification-design/: LLM_GATEWAY_INTEGRATION.md  PROBLEM_ANALYSIS.md  QUICK_START.md  RESEARCH_FINDINGS.md
docs/classification/: ARCHITECTURE_DESIGN.md  README.md
docs/cli/: RAI_CLI_GUIDE.md
docs/deployment/: DEPLOYMENT_GUIDE.md  MONITORING.md  OPERATIONS_MANUAL.md
docs/development/: API_DOCUMENTATION.md  DEVELOPER_GUIDE.md
docs/diagrams/: generate_architecture.py  generate_detailed_architecture.py  system-architecture.mmd
docs/security/: SECURITY_GUIDE.md
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pdb.yaml  rbac.yaml  secrets.yaml  service.yaml
k8s/monitoring/: alertmanager.yaml  grafana.yaml  loki.yaml  prometheus.yaml  rbac.yaml
k8s/overlays/production/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
scripts/: README-CLAUDE-SETUP.md  README.md  convert_to_postgres.py  init_database.py  seed_test_data.py  seed_test_data.sql  setup-claude-mcp.sh  test_workflow_execution.py
scripts/advanced/: setup_redis_dev.py  setup_secrets.py
scripts/db/: 01-init-databases.sql
scripts/maintenance/: DOCKER_CRON_SETUP.md  MEMORY_COMPARISON.md  README.md  check_table_sizes.sh  cleanup_old_data.sql  cron-entrypoint.sh  crontab.alpine  crontab.container  crontab.example  refresh_materialized_views.sql  run_cleanup.sh  run_refresh.sh
scripts/migration/: data_migration.py
scripts/production/: deploy.sh
scripts/validation/: comprehensive_validation.py  validate_system.py
src/: __init__.py  app.py  version.py
src/core/: __init__.py
src/core/assessment/: __init__.py  competency_assessor.py  gap_analyzer.py  level_calculator.py
src/core/business/: __init__.py  analytics_engine.py  growth_engine.py  matching_engine.py  reporting_engine.py
src/infrastructure/: __init__.py
src/services/: __init__.py
src/shared/: README.md  __init__.py  error_handlers.py  error_metrics.py  exceptions.py  logging.py  validation.py
templates/styles/: report.css
tests/: __init__.py  conftest.py  coverage_enforcement.py  example_test_suite.py  performance.py  test_providers_integration.py  test_runner.py  testcontainers.py
tests/factories/: __init__.py  activity_factory.py  competency_factory.py  event_factory.py  user_factory.py  workflow_factory.py
tests/fixtures/: __init__.py  data_factories.py  golden_datasets.py
tests/integration/: test_database_operations.py  test_end_to_end.py  test_enterprise_gateway_auth.py  test_error_handling_integration.py  test_simple_retry.py  test_slack_workflow_integration.py  test_storage_manager.py  test_workflow_error_handling.py  test_workflow_integration.py  test_workflow_monitoring.py  test_workflow_result_delivery.py
tests/manual/: test_e2e_system_health.py  test_handlers.py  test_workflow_imports.py  test_workflow_router.py
tests/mocks/: __init__.py  external_services_mock.py  llm_mock.py  slack_mock.py  temporal_mock.py
tests/performance/: benchmark_suite.py
tests/unit/: test_example.py
(+194 files in other folders)
